--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@
             <div class="footer-right">
                 <h1>Get In Touch</h1>
                 <p><a href="https://maps.app.goo.gl/m1bBSPbGsYgRRXj78" target="_blank" title="Lihat lokasi toko kami" rel="noopener noreferrer">Sidodadi no.069, Sidoarjo, Jawa Timur</a><i class="fa-solid fa-location-dot"></i></p>
-                <p>@mrsomet<i class="fa-solid fa-paper-plane"></i></p>
+                <p><a href="mailto:makinwamakin@gmail.com" target="_blank" title="Kirim email untuk kami">makinwamakin@gmail.com</a><i class="fa-solid fa-paper-plane"></i></p>
                 <p><a href="https://wa.me/+6281913301339" target="_blank" title="Chat kami melalui WhatsApp" rel="noopener noreferrer">+62 819-1330-1339</a><i class="fa-solid fa-phone"></i></p>
             </div>
         </div>
 
         <div class="social-media">
-        <a href=""><i class="fa-brands fa-x-twitter"></i></a>   
-        <a href=""><i class="fa-brands fa-instagram"></i></a>   
-        <a href=""><i class="fa-brands fa-tiktok"></i></a>   
+        <a href="https://www.facebook.com/share/q47MKnZiGsRXRe2x/?mibextid=qi2Omg" target="_blank"><i class="fa-brands fa-facebook"></i></a>   
+        <a href="https://www.instagram.com/pangkasrambut_mrsomet?igsh=Y255bmltNjVqMjE1" target="_blank"><i class="fa-brands fa-instagram"></i></a>   
+        <a href="https://www.tiktok.com/@pangkas.rambut.mr5?_t=8nFe5laTg2q&_r=1" target="_blank"><i class="fa-brands fa-tiktok"></i></a>   
         <p>Copyright © 2024 Fazcode. All Right Reserved.</p>
         </div>
     </section>
